--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,14 @@
-version: 2.0
+version: 2.1
+orbs:
+    node: circleci/node@1.1
 jobs:
     build:
-        docker:
-            - image: circleci/ruby:2.4.2-jessie-node
+        executor:
+            name: node/default
+            tag: '10.4'
         steps:
             - checkout
-        -run: echo "Hello world"
+            - node/with-cache:
+                steps:
+                    - run: npm install
+            - run: npm run test
